# Research-Sim-to-Real_Transfer

./: README.md
pepper_rob_ws/devel/: .catkin  .rosinstall
pepper_rob_ws/src/pepper_apps/: CMakeLists.txt
pepper_rob_ws/src/pepper_apps/launch/: pepper_bridge.launch  pepper_real_policy.launch
pepper_rob_ws/src/pepper_apps/scripts/: Path.py  pepper_forward.py  run_policy_with_kill.py
pepper_sim_ws/: frames.gv
pepper_sim_ws/best/20250908_171029/: evaluations.npz
pepper_sim_ws/best/20250909_152427/: evaluations.npz
pepper_sim_ws/best/20250928_122922/: evaluations.npz
pepper_sim_ws/best/20251009_205546/: evaluations.npz
pepper_sim_ws/best/20251010_113505/: evaluations.npz
pepper_sim_ws/best/20251010_131145/: evaluations.npz
pepper_sim_ws/ckpts/Policy1/: ppo_pepper_steps_vecnormalize_100000_steps.pkl  ppo_pepper_steps_vecnormalize_200000_steps.pkl  ppo_pepper_steps_vecnormalize_300000_steps.pkl
pepper_sim_ws/ckpts/Policy2/: ppo_pepper_steps_vecnormalize_100000_steps.pkl  ppo_pepper_steps_vecnormalize_200000_steps.pkl  ppo_pepper_steps_vecnormalize_300000_steps.pkl  ppo_pepper_steps_vecnormalize_400000_steps.pkl  ppo_pepper_steps_vecnormalize_500000_steps.pkl
pepper_sim_ws/ckpts/Policy3/: ppo_pepper_steps_vecnormalize_100000_steps.pkl
pepper_sim_ws/ckpts/Policy5/: ppo_pepper_steps_vecnormalize_100000_steps.pkl
pepper_sim_ws/devel/: .catkin  setup.fish
pepper_sim_ws/eval_logs/: evaluations.npz
pepper_sim_ws/logs/PPO_1/: events.out.tfevents.1755255659.Shaytrix.31113.0
pepper_sim_ws/logs/PPO_2/: events.out.tfevents.1755255753.Shaytrix.31644.0
(+139 files in other folders)
